# kinetic-rust

./: .gitmodules  .travis-update-gh-pages.sh  .travis.yml  Cargo.toml  README.md  compile_protocol.sh  index.html  params.json
LICENSE/: mit.md
_docs/: search-index.js
_docs/implementors/kinetic/: trait.Response.js
_docs/kinetic/: stability.json  struct.Client.html  trait.Command.html  trait.Response.html
_docs/kinetic-bench/: fn.version.html
_docs/kinetic/client/: struct.Client.html
_docs/kinetic/commands/: index.html
_docs/kinetic/core/: trait.Command.html  trait.Response.html
_docs/kinetic/error/: enum.KineticError.html
_docs/kinetic/proto/: enum.Command_Status_StatusCode.html
_docs/kinetic/responses/: index.html  struct.GetResponse.html
doc/: search-index.js
doc/kinetic/: enum.KineticError.html  enum.StatusCode.html  fn.protocol_version.html  fn.version.html  index.html  sidebar-items.js  stability.html  stability.json  struct.Client.html  trait.Command.html  trait.Response.html  type.AsyncClient.html  type.KineticResult.html
doc/kinetic-bench/: index.html  stability.html  stability.json
doc/kinetic-rust/: index.html  macro.cmd!.html  stability.html  stability.json
doc/kinetic-rust/shell/: index.html  struct.MultiShell.html  struct.Shell.html  struct.ShellConfig.html  type.Callback.html  type.ShellCallback.html
doc/kinetic/authentication/: enum.Credentials.html  enum.Method.html  index.html  sidebar-items.js
doc/kinetic/channel/: index.html  sidebar-items.js  struct.AsyncChannel.html  struct.KineticChannel.html  trait.KineticChannel.html  type.KineticCommand.html  type.KineticResponse.html  type.Operation.html  type.Result.html
doc/kinetic/client/: sidebar-items.js  struct.Client.html  type.AsyncClient.html
doc/kinetic/commands/: enum.Delete.html  index.html  sidebar-items.js  struct.Flush.html  struct.Get.html  struct.GetKeyRange.html  struct.GetLog.html  struct.GetNext.html  struct.GetPrevious.html  struct.GetVersion.html  struct.Integrity.html  struct.Noop.html  struct.Put.html
doc/kinetic/core/: fn.protocol_version.html  fn.version.html  sidebar-items.js  trait.Command.html  trait.Response.html  type.KineticResult.html
doc/kinetic/error/: enum.KineticError.html  index.html  sidebar-items.js
doc/kinetic/proto/: enum.StatusCode.html  fn.version.html  index.html  sidebar-items.js  struct.Command.html  (+1 more)
doc/kinetic_rust/: index.html  sidebar-items.js
src/: kinetic.rs  main.rs
src/kinetic/: authentication.rs  channel.rs  client.rs  commands.rs  core.rs  error.rs  lib.rs  network.rs  proto.rs  responses.rs  result.rs
src/kinetic-bench/: main.rs
(+247 files in other folders)
