[package]

name = "kinetic-rust"
version = "0.0.15"
authors = ["Ignacio Corderi <icorderi@msn.com>"]
homepage = "https://github.com/icorderi/kinetic-rust/"
repository = "https://github.com/icorderi/kinetic-rust/"
documentation = "http://icorderi.github.io/kinetic-rust/doc/kinetic/"
description = "A Kinetic protocol library written in Rust"
keywords = [ "Protocol", "Kinetic", "Storage" ]
readme = "README.md"
license = "MIT"

[lib]

name = "kinetic"
path = "src/kinetic/lib.rs"

[dependencies.protobuf]

git = "https://github.com/stepancheg/rust-protobuf.git"

[dependencies.rust-crypto]

git = "https://github.com/DaGenix/rust-crypto.git"

[[bin]]

name = "kinetic-rust"
path = "src/bin/kinetic_rust.rs"

[dependencies.docopt_macros]

git = "git://github.com/docopt/docopt.rs"
