[package]

name = "kinetic"
version = "0.1.2-dev"
authors = ["Ignacio Corderi <icorderi@msn.com>"]
homepage = "https://icorderi.github.io/icorderi/kinetic-rust"
repository = "https://github.com/icorderi/kinetic-rust/"
documentation = "https://icorderi.github.io/kinetic-rust/doc/kinetic/"
description = "A Kinetic protocol library written in Rust"
keywords = [ "Protocol", "Kinetic", "Storage" ]
readme = "README.md"
license = "MIT"

[lib]

name = "kinetic"
path = "src/kinetic/lib.rs"

[dependencies.protobuf]
#git = "https://github.com/stepancheg/rust-protobuf.git"

[dependencies.rust-crypto]
#git = "https://github.com/DaGenix/rust-crypto.git"

[dependencies.byteorder]

[[bin]]

name = "kinetic-rust"
path = "src/bin/kinetic_rust.rs"

[dependencies.docopt]
#git = "git://github.com/docopt/docopt.rs"

[dependencies.rustc-serialize]
[dependencies.libc]
[dependencies.term]
[dependencies.log]
[dependencies.shell]
